# docs/swagger.yaml
@@ -1,6 +1,34 @@
-basePath: /
+basePath: /api/v1
 definitions:
-  auth.LoginRequest:
+  http.HealthCheckResponse:
+    properties:
+      status:
+        type: string
+    type: object
+  response.ErrorResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  v1.CreateTaskRequest:
+    properties:
+      description:
+        type: string
+    required:
+    - description
+    type: object
+  v1.GetAllByUserIdResponse:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      is_completed:
+        type: boolean
+    type: object
+  v1.LoginRequest:
     properties:
       email:
         type: string
@@ -10,12 +38,21 @@ definitions:
     - email
     - password
     type: object
-  auth.LoginResponse:
+  v1.LoginResponse:
     properties:
       token:
         type: string
     type: object
-  auth.RegisterRequest:
+  v1.Profile:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  v1.RegisterRequest:
     properties:
       email:
         type: string
@@ -28,49 +65,12 @@ definitions:
     - name
     - password
     type: object
-  auth.RegisterResponse:
+  v1.RegisterResponse:
     properties:
       token:
         type: string
     type: object
-  healthcheck.HealthCheckResponse:
-    properties:
-      status:
-        type: string
-    type: object
-  profile.Profile:
-    properties:
-      email:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-    type: object
-  response.ErrorResponse:
-    properties:
-      message:
-        type: string
-    type: object
-  task.CreateTaskRequest:
-    properties:
-      description:
-        type: string
-    required:
-    - description
-    type: object
-  task.GetAllByUserIdResponse:
-    properties:
-      created_at:
-        type: string
-      description:
-        type: string
-      id:
-        type: string
-      is_completed:
-        type: boolean
-    type: object
-  task.UpdateTaskRequest:
+  v1.UpdateTaskRequest:
     properties:
       description:
         type: string
@@ -95,12 +95,12 @@ paths:
         name: login
         required: true
         schema:
-          $ref: '#/definitions/auth.LoginRequest'
+          $ref: '#/definitions/v1.LoginRequest'
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/auth.LoginResponse'
+            $ref: '#/definitions/v1.LoginResponse'
         "400":
           description: Bad Request
           schema:
@@ -120,12 +120,12 @@ paths:
         name: register
         required: true
         schema:
-          $ref: '#/definitions/auth.RegisterRequest'
+          $ref: '#/definitions/v1.RegisterRequest'
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/auth.RegisterResponse'
+            $ref: '#/definitions/v1.RegisterResponse'
         "400":
           description: Bad Request
           schema:
@@ -143,7 +143,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/healthcheck.HealthCheckResponse'
+            $ref: '#/definitions/http.HealthCheckResponse'
       tags:
       - common
   /profile:
@@ -153,7 +153,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/profile.Profile'
+            $ref: '#/definitions/v1.Profile'
         "400":
           description: Bad Request
           schema:
@@ -170,7 +170,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/task.GetAllByUserIdResponse'
+              $ref: '#/definitions/v1.GetAllByUserIdResponse'
             type: array
         "400":
           description: Bad Request
@@ -186,7 +186,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task.CreateTaskRequest'
+          $ref: '#/definitions/v1.CreateTaskRequest'
       responses:
         "204":
           description: No Content
@@ -239,7 +239,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/task.UpdateTaskRequest'
+          $ref: '#/definitions/v1.UpdateTaskRequest'
       responses:
         "204":
           description: No Content
